# gcolor-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  cmake-single-platform.yml
app/: CMakeLists.txt
app/src/: main.cpp
app/src/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp
app/src/emulator/: CMakeLists.txt
app/src/ui/: CMakeLists.txt
docker/: Dockerfile  build_and_push.sh
tests/: test_adc.cpp  test_add.cpp  test_and.cpp  test_cp.cpp  test_cpu.cpp  test_inc8.cpp  test_or.cpp  test_sbc.cpp  test_sub.cpp  test_xor.cpp
